Overflow-y temporary fix and mobile view offer specifications fullscreen.

--- a/src/main/webapp/resources/sass/_overhead.scss
+++ b/src/main/webapp/resources/sass/_overhead.scss
@@ -124,16 +124,21 @@ div.overhead_subcontainer {
 
 @media (max-width: 480px) {
   div.overhead_subcontainer {
+
     &.userRelated {
-      width: 90%;
-      left: 5%;
-      margin-left: 0;
+      width: 100%;
+      max-height: 100%;
+      left: 0;
+      top: 0;
+      box-shadow: none;
     }
 
     &.offerRelated {
-      width: 90%;
-      left: 5%;
-      margin-left: 0;
+      width: 100%;
+      max-height: 100%;
+      left: 0;
+      top: 0;
+      box-shadow: none;
     }
 
     &.tutorialRelated {
